<resources>
    <string name="app_name">Lab3</string>
    <string name="hello">Hello</string>
    <string name="enter_name">Enter Name</string>
    <string name="c">C++</string>
    <string name="python">Python</string>
    <string name="java">Java</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="male_or_female">Male or Female</string>
    <string name="enter">Enter</string>
</resources>